# wine-android

./: .gitignore  .gitmodules  build.sh  prepare_libs.sh
android/: gl4es_fix.cmake
android/execenv/: execenv  main.c
android/include/linux/: ipx.h
android/lib/: arm64-v8a
libs/libgbm/: CMakeLists.txt  gbm.pc
libs/llvm-unwind/include/: libunwind.h
libs/llvm-unwind/libunwind/src/: CMakeLists.txt
